0030402: Data Exchange - exported VRML file has broken location information